parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> command
Rule 1     command -> define_cmd
Rule 2     command -> set_cmd
Rule 3     command -> create_cmd
Rule 4     command -> insert_cmd
Rule 5     command -> delete_cmd
Rule 6     command -> update_cmd
Rule 7     command -> select_cmd
Rule 8     command -> get_cmd
Rule 9     command -> delete_table_cmd
Rule 10    command -> delete_relation_cmd
Rule 11    command -> exit_cmd
Rule 12    exit_cmd -> EXIT
Rule 13    get_cmd -> GET TABLE
Rule 14    get_cmd -> GET RELATION
Rule 15    define_cmd -> DEFINE RELATION WORD
Rule 16    set_cmd -> SET ATTRIBUTE CHARACTER NUMBER WORD
Rule 17    set_cmd -> SET ATTRIBUTE INTEGER WORD RANGE NUMBER NUMBER
Rule 18    set_cmd -> SET ATTRIBUTE INTEGER WORD
Rule 19    set_cmd -> SET PRIMARY KEY WORD
Rule 20    create_cmd -> CREATE TABLE WORD WORD
Rule 21    delete_relation_cmd -> DELETE RELATION WORD
Rule 22    delete_table_cmd -> DELETE TABLE WORD
Rule 23    insert_cmd -> INSERT WORD attribute_expr
Rule 24    attribute_expr -> WORD attribute_expr
Rule 25    attribute_expr -> NUMBER attribute_expr
Rule 26    attribute_expr -> WORD
Rule 27    attribute_expr -> NUMBER
Rule 28    delete_cmd -> DELETE WORD NUMBER
Rule 29    update_cmd -> UPDATE WORD NUMBER attribute_expr
Rule 30    select_cmd -> SELECT WORD FROM WORD WHERE expr
Rule 31    select_cmd -> SELECT WORD FROM WORD
Rule 32    expr -> WORD EQUAL NUMBER
Rule 33    expr -> WORD GREATER NUMBER
Rule 34    expr -> WORD LESS NUMBER

Terminals, with rules where they appear

ATTRIBUTE            : 16 17 18
CHARACTER            : 16
CREATE               : 20
DEFINE               : 15
DELETE               : 21 22 28
EQUAL                : 32
EXIT                 : 12
FROM                 : 30 31
GET                  : 13 14
GREATER              : 33
INSERT               : 23
INTEGER              : 17 18
KEY                  : 19
LESS                 : 34
NUMBER               : 16 17 17 25 27 28 29 32 33 34
PRIMARY              : 19
RANGE                : 17
RELATION             : 14 15 21
SELECT               : 30 31
SET                  : 16 17 18 19
TABLE                : 13 20 22
UPDATE               : 29
WHERE                : 30
WORD                 : 15 16 17 18 19 20 20 21 22 23 24 26 28 29 30 30 31 31 32 33 34
error                : 

Nonterminals, with rules where they appear

attribute_expr       : 23 24 25 29
command              : 0
create_cmd           : 3
define_cmd           : 1
delete_cmd           : 5
delete_relation_cmd  : 10
delete_table_cmd     : 9
exit_cmd             : 11
expr                 : 30
get_cmd              : 8
insert_cmd           : 4
select_cmd           : 7
set_cmd              : 2
update_cmd           : 6

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . define_cmd
    (2) command -> . set_cmd
    (3) command -> . create_cmd
    (4) command -> . insert_cmd
    (5) command -> . delete_cmd
    (6) command -> . update_cmd
    (7) command -> . select_cmd
    (8) command -> . get_cmd
    (9) command -> . delete_table_cmd
    (10) command -> . delete_relation_cmd
    (11) command -> . exit_cmd
    (15) define_cmd -> . DEFINE RELATION WORD
    (16) set_cmd -> . SET ATTRIBUTE CHARACTER NUMBER WORD
    (17) set_cmd -> . SET ATTRIBUTE INTEGER WORD RANGE NUMBER NUMBER
    (18) set_cmd -> . SET ATTRIBUTE INTEGER WORD
    (19) set_cmd -> . SET PRIMARY KEY WORD
    (20) create_cmd -> . CREATE TABLE WORD WORD
    (23) insert_cmd -> . INSERT WORD attribute_expr
    (28) delete_cmd -> . DELETE WORD NUMBER
    (29) update_cmd -> . UPDATE WORD NUMBER attribute_expr
    (30) select_cmd -> . SELECT WORD FROM WORD WHERE expr
    (31) select_cmd -> . SELECT WORD FROM WORD
    (13) get_cmd -> . GET TABLE
    (14) get_cmd -> . GET RELATION
    (22) delete_table_cmd -> . DELETE TABLE WORD
    (21) delete_relation_cmd -> . DELETE RELATION WORD
    (12) exit_cmd -> . EXIT

    DEFINE          shift and go to state 19
    SET             shift and go to state 3
    CREATE          shift and go to state 5
    INSERT          shift and go to state 16
    DELETE          shift and go to state 4
    UPDATE          shift and go to state 18
    SELECT          shift and go to state 6
    GET             shift and go to state 11
    EXIT            shift and go to state 20

    set_cmd                        shift and go to state 10
    update_cmd                     shift and go to state 1
    create_cmd                     shift and go to state 2
    delete_relation_cmd            shift and go to state 12
    select_cmd                     shift and go to state 13
    insert_cmd                     shift and go to state 14
    command                        shift and go to state 15
    define_cmd                     shift and go to state 17
    delete_cmd                     shift and go to state 8
    exit_cmd                       shift and go to state 9
    get_cmd                        shift and go to state 21
    delete_table_cmd               shift and go to state 7

state 1

    (6) command -> update_cmd .

    $end            reduce using rule 6 (command -> update_cmd .)


state 2

    (3) command -> create_cmd .

    $end            reduce using rule 3 (command -> create_cmd .)


state 3

    (16) set_cmd -> SET . ATTRIBUTE CHARACTER NUMBER WORD
    (17) set_cmd -> SET . ATTRIBUTE INTEGER WORD RANGE NUMBER NUMBER
    (18) set_cmd -> SET . ATTRIBUTE INTEGER WORD
    (19) set_cmd -> SET . PRIMARY KEY WORD

    ATTRIBUTE       shift and go to state 22
    PRIMARY         shift and go to state 23


state 4

    (28) delete_cmd -> DELETE . WORD NUMBER
    (22) delete_table_cmd -> DELETE . TABLE WORD
    (21) delete_relation_cmd -> DELETE . RELATION WORD

    WORD            shift and go to state 25
    TABLE           shift and go to state 24
    RELATION        shift and go to state 26


state 5

    (20) create_cmd -> CREATE . TABLE WORD WORD

    TABLE           shift and go to state 27


state 6

    (30) select_cmd -> SELECT . WORD FROM WORD WHERE expr
    (31) select_cmd -> SELECT . WORD FROM WORD

    WORD            shift and go to state 28


state 7

    (9) command -> delete_table_cmd .

    $end            reduce using rule 9 (command -> delete_table_cmd .)


state 8

    (5) command -> delete_cmd .

    $end            reduce using rule 5 (command -> delete_cmd .)


state 9

    (11) command -> exit_cmd .

    $end            reduce using rule 11 (command -> exit_cmd .)


state 10

    (2) command -> set_cmd .

    $end            reduce using rule 2 (command -> set_cmd .)


state 11

    (13) get_cmd -> GET . TABLE
    (14) get_cmd -> GET . RELATION

    TABLE           shift and go to state 30
    RELATION        shift and go to state 29


state 12

    (10) command -> delete_relation_cmd .

    $end            reduce using rule 10 (command -> delete_relation_cmd .)


state 13

    (7) command -> select_cmd .

    $end            reduce using rule 7 (command -> select_cmd .)


state 14

    (4) command -> insert_cmd .

    $end            reduce using rule 4 (command -> insert_cmd .)


state 15

    (0) S' -> command .



state 16

    (23) insert_cmd -> INSERT . WORD attribute_expr

    WORD            shift and go to state 31


state 17

    (1) command -> define_cmd .

    $end            reduce using rule 1 (command -> define_cmd .)


state 18

    (29) update_cmd -> UPDATE . WORD NUMBER attribute_expr

    WORD            shift and go to state 32


state 19

    (15) define_cmd -> DEFINE . RELATION WORD

    RELATION        shift and go to state 33


state 20

    (12) exit_cmd -> EXIT .

    $end            reduce using rule 12 (exit_cmd -> EXIT .)


state 21

    (8) command -> get_cmd .

    $end            reduce using rule 8 (command -> get_cmd .)


state 22

    (16) set_cmd -> SET ATTRIBUTE . CHARACTER NUMBER WORD
    (17) set_cmd -> SET ATTRIBUTE . INTEGER WORD RANGE NUMBER NUMBER
    (18) set_cmd -> SET ATTRIBUTE . INTEGER WORD

    CHARACTER       shift and go to state 34
    INTEGER         shift and go to state 35


state 23

    (19) set_cmd -> SET PRIMARY . KEY WORD

    KEY             shift and go to state 36


state 24

    (22) delete_table_cmd -> DELETE TABLE . WORD

    WORD            shift and go to state 37


state 25

    (28) delete_cmd -> DELETE WORD . NUMBER

    NUMBER          shift and go to state 38


state 26

    (21) delete_relation_cmd -> DELETE RELATION . WORD

    WORD            shift and go to state 39


state 27

    (20) create_cmd -> CREATE TABLE . WORD WORD

    WORD            shift and go to state 40


state 28

    (30) select_cmd -> SELECT WORD . FROM WORD WHERE expr
    (31) select_cmd -> SELECT WORD . FROM WORD

    FROM            shift and go to state 41


state 29

    (14) get_cmd -> GET RELATION .

    $end            reduce using rule 14 (get_cmd -> GET RELATION .)


state 30

    (13) get_cmd -> GET TABLE .

    $end            reduce using rule 13 (get_cmd -> GET TABLE .)


state 31

    (23) insert_cmd -> INSERT WORD . attribute_expr
    (24) attribute_expr -> . WORD attribute_expr
    (25) attribute_expr -> . NUMBER attribute_expr
    (26) attribute_expr -> . WORD
    (27) attribute_expr -> . NUMBER

    WORD            shift and go to state 43
    NUMBER          shift and go to state 44

    attribute_expr                 shift and go to state 42

state 32

    (29) update_cmd -> UPDATE WORD . NUMBER attribute_expr

    NUMBER          shift and go to state 45


state 33

    (15) define_cmd -> DEFINE RELATION . WORD

    WORD            shift and go to state 46


state 34

    (16) set_cmd -> SET ATTRIBUTE CHARACTER . NUMBER WORD

    NUMBER          shift and go to state 47


state 35

    (17) set_cmd -> SET ATTRIBUTE INTEGER . WORD RANGE NUMBER NUMBER
    (18) set_cmd -> SET ATTRIBUTE INTEGER . WORD

    WORD            shift and go to state 48


state 36

    (19) set_cmd -> SET PRIMARY KEY . WORD

    WORD            shift and go to state 49


state 37

    (22) delete_table_cmd -> DELETE TABLE WORD .

    $end            reduce using rule 22 (delete_table_cmd -> DELETE TABLE WORD .)


state 38

    (28) delete_cmd -> DELETE WORD NUMBER .

    $end            reduce using rule 28 (delete_cmd -> DELETE WORD NUMBER .)


state 39

    (21) delete_relation_cmd -> DELETE RELATION WORD .

    $end            reduce using rule 21 (delete_relation_cmd -> DELETE RELATION WORD .)


state 40

    (20) create_cmd -> CREATE TABLE WORD . WORD

    WORD            shift and go to state 50


state 41

    (30) select_cmd -> SELECT WORD FROM . WORD WHERE expr
    (31) select_cmd -> SELECT WORD FROM . WORD

    WORD            shift and go to state 51


state 42

    (23) insert_cmd -> INSERT WORD attribute_expr .

    $end            reduce using rule 23 (insert_cmd -> INSERT WORD attribute_expr .)


state 43

    (24) attribute_expr -> WORD . attribute_expr
    (26) attribute_expr -> WORD .
    (24) attribute_expr -> . WORD attribute_expr
    (25) attribute_expr -> . NUMBER attribute_expr
    (26) attribute_expr -> . WORD
    (27) attribute_expr -> . NUMBER

    $end            reduce using rule 26 (attribute_expr -> WORD .)
    WORD            shift and go to state 43
    NUMBER          shift and go to state 44

    attribute_expr                 shift and go to state 52

state 44

    (25) attribute_expr -> NUMBER . attribute_expr
    (27) attribute_expr -> NUMBER .
    (24) attribute_expr -> . WORD attribute_expr
    (25) attribute_expr -> . NUMBER attribute_expr
    (26) attribute_expr -> . WORD
    (27) attribute_expr -> . NUMBER

    $end            reduce using rule 27 (attribute_expr -> NUMBER .)
    WORD            shift and go to state 43
    NUMBER          shift and go to state 44

    attribute_expr                 shift and go to state 53

state 45

    (29) update_cmd -> UPDATE WORD NUMBER . attribute_expr
    (24) attribute_expr -> . WORD attribute_expr
    (25) attribute_expr -> . NUMBER attribute_expr
    (26) attribute_expr -> . WORD
    (27) attribute_expr -> . NUMBER

    WORD            shift and go to state 43
    NUMBER          shift and go to state 44

    attribute_expr                 shift and go to state 54

state 46

    (15) define_cmd -> DEFINE RELATION WORD .

    $end            reduce using rule 15 (define_cmd -> DEFINE RELATION WORD .)


state 47

    (16) set_cmd -> SET ATTRIBUTE CHARACTER NUMBER . WORD

    WORD            shift and go to state 55


state 48

    (17) set_cmd -> SET ATTRIBUTE INTEGER WORD . RANGE NUMBER NUMBER
    (18) set_cmd -> SET ATTRIBUTE INTEGER WORD .

    RANGE           shift and go to state 56
    $end            reduce using rule 18 (set_cmd -> SET ATTRIBUTE INTEGER WORD .)


state 49

    (19) set_cmd -> SET PRIMARY KEY WORD .

    $end            reduce using rule 19 (set_cmd -> SET PRIMARY KEY WORD .)


state 50

    (20) create_cmd -> CREATE TABLE WORD WORD .

    $end            reduce using rule 20 (create_cmd -> CREATE TABLE WORD WORD .)


state 51

    (30) select_cmd -> SELECT WORD FROM WORD . WHERE expr
    (31) select_cmd -> SELECT WORD FROM WORD .

    WHERE           shift and go to state 57
    $end            reduce using rule 31 (select_cmd -> SELECT WORD FROM WORD .)


state 52

    (24) attribute_expr -> WORD attribute_expr .

    $end            reduce using rule 24 (attribute_expr -> WORD attribute_expr .)


state 53

    (25) attribute_expr -> NUMBER attribute_expr .

    $end            reduce using rule 25 (attribute_expr -> NUMBER attribute_expr .)


state 54

    (29) update_cmd -> UPDATE WORD NUMBER attribute_expr .

    $end            reduce using rule 29 (update_cmd -> UPDATE WORD NUMBER attribute_expr .)


state 55

    (16) set_cmd -> SET ATTRIBUTE CHARACTER NUMBER WORD .

    $end            reduce using rule 16 (set_cmd -> SET ATTRIBUTE CHARACTER NUMBER WORD .)


state 56

    (17) set_cmd -> SET ATTRIBUTE INTEGER WORD RANGE . NUMBER NUMBER

    NUMBER          shift and go to state 58


state 57

    (30) select_cmd -> SELECT WORD FROM WORD WHERE . expr
    (32) expr -> . WORD EQUAL NUMBER
    (33) expr -> . WORD GREATER NUMBER
    (34) expr -> . WORD LESS NUMBER

    WORD            shift and go to state 59

    expr                           shift and go to state 60

state 58

    (17) set_cmd -> SET ATTRIBUTE INTEGER WORD RANGE NUMBER . NUMBER

    NUMBER          shift and go to state 61


state 59

    (32) expr -> WORD . EQUAL NUMBER
    (33) expr -> WORD . GREATER NUMBER
    (34) expr -> WORD . LESS NUMBER

    EQUAL           shift and go to state 64
    GREATER         shift and go to state 62
    LESS            shift and go to state 63


state 60

    (30) select_cmd -> SELECT WORD FROM WORD WHERE expr .

    $end            reduce using rule 30 (select_cmd -> SELECT WORD FROM WORD WHERE expr .)


state 61

    (17) set_cmd -> SET ATTRIBUTE INTEGER WORD RANGE NUMBER NUMBER .

    $end            reduce using rule 17 (set_cmd -> SET ATTRIBUTE INTEGER WORD RANGE NUMBER NUMBER .)


state 62

    (33) expr -> WORD GREATER . NUMBER

    NUMBER          shift and go to state 65


state 63

    (34) expr -> WORD LESS . NUMBER

    NUMBER          shift and go to state 66


state 64

    (32) expr -> WORD EQUAL . NUMBER

    NUMBER          shift and go to state 67


state 65

    (33) expr -> WORD GREATER NUMBER .

    $end            reduce using rule 33 (expr -> WORD GREATER NUMBER .)


state 66

    (34) expr -> WORD LESS NUMBER .

    $end            reduce using rule 34 (expr -> WORD LESS NUMBER .)


state 67

    (32) expr -> WORD EQUAL NUMBER .

    $end            reduce using rule 32 (expr -> WORD EQUAL NUMBER .)

